--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-router-dom": "^6.22.3",
     "framer-motion": "^11.0.8",
     "mapbox-gl": "^3.2.0",
-    "@mapbox/mapbox-gl-geocoder": "^5.0.2"
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "axios": "^1.6.7",
+    "react-hot-toast": "^2.4.1",
+    "react-query": "^3.39.3",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
