--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/yieldvision
-JWT_SECRET=your_jwt_secret_key
+MONGODB_URI=mongodb+srv://borateadwait:tey7d25drBkQbwqh@cluster0.wrjmc.mongodb.net/
+JWT_SECRET=qwertyuioopasdfghjkklzxcvbnm
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your_email@gmail.com
@@ -9,4 +9,4 @@ GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
 LINKEDIN_CLIENT_ID=your_linkedin_client_id
 LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5173
