--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,8 @@ MONGODB_URI=mongodb+srv://borateadwait:tey7d25drBkQbwqh@cluster0.wrjmc.mongodb.n
 JWT_SECRET=qwertyuioopasdfghjkklzxcvbnm
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your_email@gmail.com
-SMTP_PASS=your_app_specific_password
+SMTP_USER=jabongadu@gmail.com
+SMTP_PASS=haufnniavfvsghlb
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
 LINKEDIN_CLIENT_ID=your_linkedin_client_id
