--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.11",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
