--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "gsap": "^3.12.5",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3",
-    "framer-motion": "^11.0.8",
-    "mapbox-gl": "^3.2.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "axios": "^1.6.7",
+    "framer-motion": "^11.0.8",
+    "gsap": "^3.12.5",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.344.0",
+    "mapbox-gl": "^3.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
-    "jwt-decode": "^4.0.0"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
