--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "concurrently \"npm run start-node\" \"npm run start-fastapi\"",
+    "start-fastapi": "set PYTHONPATH=src && uvicorn npk.main:app --reload",
+    "start-node": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
@@ -25,6 +27,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "nodemon": "^3.1.0"
   }
 }
