--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "axios": "^1.7.9",
     "axis": "^1.0.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
