--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,13 @@
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^3.9.2",
     "react": "^18.3.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
