--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,13 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^3.9.2",
+    "marked": "^15.0.6",
     "react": "^18.3.1",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
