--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,15 @@ scikit-learn==1.4.0
 scipy==1.12.0
 python-multipart==0.0.6
 rasterio==1.4.3
+
+streamlit
+openai==0.28
+audio_recorder_streamlit
+streamlit-float
+python-dotenv
+assemblyai
+pyttsx3
+google-cloud-texttospeech
+requests
+pydub
+numpy
