--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^3.9.2",
     "marked": "^15.0.6",
+    "qrcode.react": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
