--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,9 @@
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-linkedin-oauth2": "^2.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.7.4",
+    "peer": "^1.0.2"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
