--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,15 @@
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^3.9.2",
     "marked": "^15.0.6",
+    "peerjs": "^1.5.2",
     "qrcode.react": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
-    "recharts": "^2.12.0"
+    "recharts": "^2.12.0",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
