--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "axis": "^1.0.0",
     "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.0.8",
     "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
@@ -22,6 +23,7 @@
     "lucide-react": "^0.344.0",
     "mapbox-gl": "^3.9.2",
     "marked": "^15.0.6",
+    "papaparse": "^5.5.2",
     "peerjs": "^1.5.2",
     "qrcode.react": "^3.2.0",
     "react": "^18.3.1",
