--- a/backend/package.json
+++ b/backend/package.json
@@ -26,8 +26,8 @@
     "passport-github2": "^0.1.12",
     "passport-linkedin-oauth2": "^2.0.0",
     "path": "^0.12.7",
-    "socket.io": "^4.7.4",
-    "peer": "^1.0.2"
+    "peer": "^1.0.2",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
