--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^10.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.0",
